# cmake-stora

./: .gitignore  CMakeLists.txt  README.md  gen-sources.sh  go.sh  iar-toolchain.cmake
